examples/good/enums.hmy
service_name: Vehicule
service_version: 1.0.0

enum VehiculeType { CAR, BIKE, SPACESHIP}

struct Vehicule {
  brand : String,
  type: VehiculeType,
  price : Int
}

resource Vehicule("/vehicule")
