examples/bad/enum_value_clash.hmy
service_name: MapService
service_version: 1.0
 
enum hasClashes { ONE, ONE, TWO}

struct MapEntry {
  @PK
  key : String,
  value : String
}
 
resource MapEntry ("/map") 
